overlap layout button color fixes

--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -112,6 +112,7 @@
         display: flex;
         width: auto;
         padding-left: add($container-padding-x, 1.75rem);
+        color: inherit;
       }
 
       .dropdown-menu .dropdown-item {
@@ -129,7 +130,7 @@
 
     .nav-item.active:after {
       border-bottom-width: 0;
-      border-left-width: 2px;
+      border-left-width: 3px;
       right: auto;
       top: 0;
       bottom: 0;
@@ -392,6 +393,7 @@ Navbar vertical
             align-items: flex-start;
             @include transition(transform $transition-time);
             overflow-x: auto;
+            padding: 0;
 
             &.navbar-right {
               left: auto;
