--- a/src/scss/ui/_cards.scss
+++ b/src/scss/ui/_cards.scss
@@ -29,6 +29,42 @@
   }
 }
 
+// Card stamp
+.card-stamp {
+  --stamp-size: 7rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: calc(var(--stamp-size) * 1);
+  height: calc(var(--stamp-size) * 1);
+  max-height: 100%;
+  border-top-right-radius: $border-radius;
+  overflow: hidden;
+  pointer-events: none;
+}
+
+.card-stamp-icon {
+  background: $text-muted;
+  color: $white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: $border-radius-pill;
+  width: calc(var(--stamp-size) * 1);
+  height: calc(var(--stamp-size) * 1);
+  position: relative;
+  top: calc(var(--stamp-size) * -.25);
+  right: calc(var(--stamp-size) * -.25);
+  font-size: calc(var(--stamp-size) * .75);
+  transform: rotate(10deg);
+  opacity: .075;
+
+  .icon {
+    stroke-width: 2;
+    width: calc(var(--stamp-size) * .75);
+    height: calc(var(--stamp-size) * .75);
+  }
+}
 
 // Card image
 .card-img,
